--- a/composer.json
+++ b/composer.json
@@ -8,23 +8,23 @@
     ],
     "license": "MIT",
     "require": {
-        "php": "^7.3|^8.0",
+        "php": "^8.0",
         "ext-json": "*",
         "consoletvs/charts": "^6.5",
-        "guzzlehttp/guzzle": "^7.0.1",
+        "guzzlehttp/guzzle": "^7.2",
         "laravel-admin-ext/daterangepicker": "^1.0",
-        "laravel/framework": "^8.83",
-        "laravel/tinker": "^2.5",
-        "laravelcollective/html": "^6.2",
+        "laravel/framework": "^9.41",
+        "laravel/tinker": "^2.7",
+        "laravelcollective/html": "^6.3",
         "tremby/laravel-git-version": "^1.2",
         "yoeunes/toastr": "^1.2"
     },
     "require-dev": {
-        "facade/ignition": "^2.5",
         "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^5.10",
+        "nunomaduro/collision": "^6.3",
         "phpunit/phpunit": "^9.5.10",
-        "fakerphp/faker": "^1.9.1"
+        "fakerphp/faker": "^1.9.1",
+        "spatie/laravel-ignition": "^1.4"
     },
     "config": {
         "optimize-autoloader": true,
