--- a/package.json
+++ b/package.json
@@ -1,13 +1,8 @@
 {
     "private": true,
     "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "dev": "vite",
+        "build": "vite build"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.1",
@@ -23,21 +18,26 @@
         "datatables.net-buttons": "^2.3.3",
         "datatables.net-buttons-dt": "^2.3.3",
         "datatables.net-dt": "^1.13.1",
+        "datatables.net-responsive-dt": "^2.4.0",
         "daterangepicker": "^3.1.0",
         "jquery": "^3.6.1",
         "jquery-countup": "^1.0.1",
         "jquery-ui": "^1.13.2",
         "jstree": "^3.3.12",
         "laravel-mix": "^6.0.49",
+        "laravel-vite-plugin": "^0.7.1",
         "lodash": "^4.17.21",
         "moment": "2.29.4",
         "normalize.css": "^8.0.1",
         "popper.js": "^1.16.1",
+        "postcss": "^8.4.19",
         "resolve-url-loader": "5.0",
         "sass": "^1.56.1",
         "sass-loader": "^13.2.0",
         "select2": "^4.0.13",
+        "tailwindcss": "^3.2.4",
         "toastr": "^2.1",
+        "vite": "^3.2.4",
         "vue-template-compiler": "^2.7.14"
     }
 }
