--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.2.1",
-        "@mdi/font": "^7.0.96",
-        "axios": "^1.2.0",
+        "@mdi/font": "^7.1.96",
+        "axios": "^1.2.1",
         "bootstrap": "^5.2.3",
         "bootstrap-daterangepicker": "^3.1.0",
-        "chart.js": "^4.0.1",
+        "chart.js": "^4.1.1",
         "components": "^0.1.0",
         "cross-env": "^7.0.3",
         "datatables.net": "^1.13.1",
@@ -20,24 +20,25 @@
         "datatables.net-dt": "^1.13.1",
         "datatables.net-responsive-dt": "^2.4.0",
         "daterangepicker": "^3.1.0",
-        "jquery": "^3.6.1",
+        "jquery": "^3.6.3",
         "jquery-countup": "^1.0.1",
         "jquery-ui": "^1.13.2",
         "jstree": "^3.3.12",
         "laravel-mix": "^6.0.49",
-        "laravel-vite-plugin": "^0.7.1",
+        "laravel-vite-plugin": "^0.7.3",
         "lodash": "^4.17.21",
         "moment": "2.29.4",
         "normalize.css": "^8.0.1",
         "popper.js": "^1.16.1",
-        "postcss": "^8.4.19",
+        "postcss": "^8.4.20",
         "resolve-url-loader": "5.0",
-        "sass": "^1.56.1",
+        "sass": "^1.57.1",
         "sass-loader": "^13.2.0",
         "select2": "^4.0.13",
         "tailwindcss": "^3.2.4",
         "toastr": "^2.1",
-        "vite": "^3.2.4",
+        "twitter-bootstrap": "^2.1.1",
+        "vite": "^4.0.3",
         "vue-template-compiler": "^2.7.14"
     }
 }
